Fix quiz components word wrap styling, add rate quiz preloading, add centered loading icon in Rate quizes

--- a/SoloLearn/app/Scripts/components/Shared/Quiz/styles.scss
+++ b/SoloLearn/app/Scripts/components/Shared/Quiz/styles.scss
@@ -21,6 +21,10 @@
 	}
 	.fill-in-answers-container {
 		margin: 20px;
+		* {
+			word-break: break-all;
+			white-space: pre-wrap;
+		}
 	}
 	.answer-input-field {
 		overflow: hidden;
